--- a/index.html
+++ b/index.html
@@ -77,11 +77,21 @@
                         <p>5 Star Ratings (2k+ Review)</p>
                     </div>
                     <div class="images">
-                        <img src="./assets/img/logo (1).svg" alt="" />
-                        <img src="./assets/img/slack.svg" alt="" />
-                        <img src="./assets/img/Union.svg" alt="" />
-                        <img src="./assets/img/logo (2).svg" alt="" />
-                        <img src="./assets/img/logo (3).svg" alt="" />
+                        <a href="">
+                            <img src="./assets/img/logo (1).svg" alt="" />
+                        </a>
+                        <a href="">
+                            <img src="./assets/img/slack.svg" alt="" />
+                        </a>
+                        <a href="">
+                            <img src="./assets/img/Union.svg" alt="" />
+                        </a>
+                        <a href="">
+                            <img src="./assets/img/logo (2).svg" alt="" />
+                        </a>
+                        <a href="">
+                            <img src="./assets/img/logo (3).svg" alt="" />
+                        </a>
                     </div>
                 </div>
             </div>
