--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     </head>
     <body>
         <main>
-            <!--Header-->
-            <header class="header">
+            <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <img src="./assets/img/logo.svg" alt="" />
@@ -41,7 +40,11 @@
                             <a href="" class="btn active-btn">Sign up</a>
                         </div>
                     </nav>
-
+                </div>
+            </header>
+            <!--Header-->
+            <div class="hero-wrap">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -58,7 +61,7 @@
                     </div>
                     <img src="./assets/img/hero.svg" alt="" class="hero-img" />
                 </div>
-            </header>
+            </div>
             <!--Clients-->
             <div class="clients">
                 <div class="content">
