--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
-                        <img src="./assets/img/logo.svg" alt="" />
+                        <a href="#!">
+                            <img src="./assets/img/logo.svg" alt="" />
+                        </a>
                         <ul>
                             <li><a href="">Home</a></li>
                             <li><a href="">Reatures</a></li>
