--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link rel="stylesheet" href="./assets/css/base.css" />
     </head>
     <body>
-        <main>
+        <main id="Home">
             <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
@@ -31,11 +31,11 @@
                             <img src="./assets/img/logo.svg" alt="" />
                         </a>
                         <ul>
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Reatures</a></li>
-                            <li><a href="">Services</a></li>
-                            <li><a href="">Resources</a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="#Home">Home</a></li>
+                            <li><a href="#Features">Reatures</a></li>
+                            <li><a href="#Services">Services</a></li>
+                            <li><a href="#Resources">Resources</a></li>
+                            <li><a href="#Contact">Contact</a></li>
                         </ul>
                         <div class="active">
                             <a href="" class="active-link">Sign in</a>
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <!--Clients-->
-            <div class="clients">
+            <div id="Services" class="clients">
                 <div class="content">
                     <div class="row">
                         <img src="./assets/img/logo.svg" alt="" />
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <!--Guides-->
-            <div class="guides">
+            <div id="Resources" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -166,7 +166,7 @@
                 </div>
             </div>
             <!--Featured-->
-            <div class="featured">
+            <div id="Featured" class="featured">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -479,7 +479,7 @@
                 </div>
             </div>
             <!--Subscription-->
-            <div class="subscription">
+            <div id="Contact" class="subscription">
                 <div class="content">
                     <div class="body">
                         <div class="info">
