--- a/index.html
+++ b/index.html
@@ -23,47 +23,47 @@
         <link rel="stylesheet" href="./assets/css/base.css" />
     </head>
     <body>
-        <main id="Home">
-            <header class="fixed-header">
-                <div class="content">
-                    <nav class="navbar">
-                        <a href="#!">
-                            <img src="./assets/img/logo.svg" alt="" />
-                        </a>
-                        <ul>
-                            <li><a href="#Home">Home</a></li>
-                            <li><a href="#Features">Reatures</a></li>
-                            <li><a href="#Services">Services</a></li>
-                            <li><a href="#Resources">Resources</a></li>
-                            <li><a href="#Contact">Contact</a></li>
-                        </ul>
-                        <div class="active">
-                            <a href="" class="active-link">Sign in</a>
-                            <a href="" class="btn active-btn">Sign up</a>
-                        </div>
-                    </nav>
-                </div>
-            </header>
-            <!--Header-->
-            <div class="hero-wrap">
-                <div class="content">
-                    <div class="hero">
-                        <div class="info">
-                            <p class="sub-title">Welcome to Besnik Agency</p>
-                            <h1 class="title">
-                                Discover a place you'll love to live.
-                            </h1>
-                            <p class="desc">
-                                Get the best real estate deals first, before
-                                they hit the mass market! hot foreclosure deals
-                                with one simple search.
-                            </p>
-                            <a href="" class="btn btn-cta">More About Us</a>
-                        </div>
+        <header class="fixed-header">
+            <div class="content">
+                <nav class="navbar">
+                    <a href="#!">
+                        <img src="./assets/img/logo.svg" alt="" />
+                    </a>
+                    <ul>
+                        <li><a href="#Home">Home</a></li>
+                        <li><a href="#Features">Reatures</a></li>
+                        <li><a href="#Services">Services</a></li>
+                        <li><a href="#Resources">Resources</a></li>
+                        <li><a href="#Contact">Contact</a></li>
+                    </ul>
+                    <div class="active">
+                        <a href="" class="active-link">Sign in</a>
+                        <a href="" class="btn active-btn">Sign up</a>
                     </div>
-                    <img src="./assets/img/hero.svg" alt="" class="hero-img" />
-                </div>
+                </nav>
             </div>
+        </header>
+        <!--Header-->
+        <div class="hero-wrap">
+            <div class="content">
+                <div class="hero">
+                    <div class="info">
+                        <p class="sub-title">Welcome to Besnik Agency</p>
+                        <h1 class="title">
+                            Discover a place you'll love to live.
+                        </h1>
+                        <p class="desc">
+                            Get the best real estate deals first, before they
+                            hit the mass market! hot foreclosure deals with one
+                            simple search.
+                        </p>
+                        <a href="" class="btn btn-cta">More About Us</a>
+                    </div>
+                </div>
+                <img src="./assets/img/hero.svg" alt="" class="hero-img" />
+            </div>
+        </div>
+        <main id="#">
             <!--Clients-->
             <div id="Services" class="clients">
                 <div class="content">
@@ -499,97 +499,87 @@
                     </div>
                 </div>
             </div>
-            <!--Footer-->
-            <footer class="footer">
-                <div class="content">
-                    <div class="row row-top">
-                        <div class="column">
-                            <h3 class="heading">Product</h3>
-                            <ul class="list">
-                                <li class="item">
-                                    <a href="">Listing</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Property</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Agents</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Blog</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="column">
-                            <h3 class="heading">Resources</h3>
-                            <ul class="list">
-                                <li class="item">
-                                    <a href="">Our Homes</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Member Stories</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Video</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Free trial</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="column">
-                            <h3 class="heading">Company</h3>
-                            <ul class="list">
-                                <li class="item">
-                                    <a href="">Patnerships</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Terms of use</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Privacy</a>
-                                </li>
-                                <li class="item">
-                                    <a href="">Sitemap</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="column">
-                            <h3 class="heading">Get in touch</h3>
-                            <p class="desc">
-                                You’ll find your next home, in any style you
-                                prefer.
-                            </p>
-                            <div class="social">
-                                <a href="" class="social-link">
-                                    <img
-                                        src="./assets/img/facebook.svg"
-                                        alt=""
-                                    />
-                                </a>
-                                <a href="" class="social-link">
-                                    <img
-                                        src="./assets/img/twitter.svg"
-                                        alt=""
-                                    />
-                                </a>
-                                <a href="" class="social-link">
-                                    <img
-                                        src="./assets/img/linkend.svg"
-                                        alt=""
-                                    />
-                                </a>
-                            </div>
-                        </div>
+        </main>
+        <!--Footer-->
+        <footer class="footer">
+            <div class="content">
+                <div class="row row-top">
+                    <div class="column">
+                        <h3 class="heading">Product</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Listing</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Property</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Agents</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Blog</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="row row-bottom">
-                        <img src="./assets/img/logo.svg" alt="" class="logo" />
-                        <p class="coppyright">
-                            Copyright 2020.com, All rights reserved.
+                    <div class="column">
+                        <h3 class="heading">Resources</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Our Homes</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Member Stories</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Video</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Free trial</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">Company</h3>
+                        <ul class="list">
+                            <li class="item">
+                                <a href="">Patnerships</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Terms of use</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Privacy</a>
+                            </li>
+                            <li class="item">
+                                <a href="">Sitemap</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <h3 class="heading">Get in touch</h3>
+                        <p class="desc">
+                            You’ll find your next home, in any style you prefer.
                         </p>
+                        <div class="social">
+                            <a href="" class="social-link">
+                                <img src="./assets/img/facebook.svg" alt="" />
+                            </a>
+                            <a href="" class="social-link">
+                                <img src="./assets/img/twitter.svg" alt="" />
+                            </a>
+                            <a href="" class="social-link">
+                                <img src="./assets/img/linkend.svg" alt="" />
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </footer>
-        </main>
+                <div class="row row-bottom">
+                    <img src="./assets/img/logo.svg" alt="" class="logo" />
+                    <p class="coppyright">
+                        Copyright 2020.com, All rights reserved.
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
