--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
         <header class="fixed-header">
             <div class="content">
                 <nav class="navbar">
-                    <a href="#!">
+                    <a href="#">
                         <img src="./assets/img/logo.svg" alt="" />
                     </a>
                     <ul>
-                        <li><a href="#Home">Home</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="#Features">Reatures</a></li>
                         <li><a href="#Services">Services</a></li>
                         <li><a href="#Resources">Resources</a></li>
